--- a/employeeapp/employeeapp/src/main/resources/application.properties
+++ b/employeeapp/employeeapp/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/micro_services
+spring.datasource.username=root
+spring.datasource.password=rudra
 
+
+
+
+spring.application.name=employee-app
+server.port=8082
+server.servlet.context-path=/employee-app/api
+
+addressservice.base.url=http://localhost:8081/address-app/api
