--- a/employeeapp/employeeapp/src/main/resources/application.properties
+++ b/employeeapp/employeeapp/src/main/resources/application.properties
@@ -10,3 +10,10 @@ server.port=8082
 server.servlet.context-path=/employee-app/api
 
 addressservice.base.url=http://localhost:8081/address-app/api
+
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+info.app.name=Employee-app
+info.app.description=Testing microServices
+info.app.version=1.0.0
